Added Magic Item support to the API
