# src/dnd/api.py
@@ -1,11 +1,10 @@
 import json
-from typing import Optional
 
-from bottle import HTTPError, Bottle
+from bottle import HTTPError, Bottle, request, FormsDict
 
 from data.dnd.enums import spell_classes
 from src.common.utils import title_to_page_name
-from src.dnd.utils import load_spells
+from src.dnd.utils import load_spells, filter_magic_items, load_magic_items, get_magic_item_subtypes
 
 
 def load_api_endpoints(app: Bottle):
@@ -30,6 +29,22 @@ def load_api_endpoints(app: Bottle):
             raise HTTPError(404, f"I couldn't find a spell by the name of \"{name}\".")
         return spells[formatted_name]
 
+    @app.get("/magic_items")
+    def get_magic_items():
+        return get_magic_item_list(request.query)
+
+    @app.get("/magic_items/subtypes")
+    def get_magic_item_subtypes_api():
+        return json.dumps(get_magic_item_subtypes())
+
+    @app.get("/magic_item/<name>")
+    def get_magic_item(name):
+        formatted_name = title_to_page_name(name)
+        magic_items = load_magic_items()
+        if formatted_name not in magic_items:
+            raise HTTPError(404, f"I couldn't find a magic item by the name of \"{name}\".")
+        return magic_items[formatted_name]
+
 
 def get_spell_list(name: str = "", level: str = "") -> str:
     spells = load_spells()
@@ -49,3 +64,13 @@ def get_spell_list(name: str = "", level: str = "") -> str:
                 level = "cantrip"
             spells = {k: v for k, v in spells.items() if level == v["level"]}
     return json.dumps(list(spells.keys()))
+
+
+def get_magic_item_list(query: FormsDict) -> str:
+    # Convert comma-delimited strings in values to lists
+    filters = {}
+    for k, v in query.items():
+        filters[k] = v.split(",")
+    print(filters)
+    magic_items = filter_magic_items(filters)
+    return json.dumps(list(magic_items.keys()))
